syntax = "proto3";

package books;

option go_package="proto/protogen;BooksProto";

message BookCreateRequest {
  string title = 1;
  string author = 2;
  string description = 3;
}

message BookUpdateRequest {
  string id = 1;
  string title = 2;
  string author = 3;
  string description = 4;
}

message BookGetRequest {
  string id = 1;
}

message BookDeleteRequest {
  string id = 1;
}

message BookResponse {
  string id = 1;
  string title = 2;
  string author = 3;
  string description = 4;
}

message BookListResponse {
  repeated BookResponse books = 1;
}

message Empty {}


service BookService {
  rpc CreateBook (BookCreateRequest) returns (Empty);
  rpc UpdateBook (BookUpdateRequest) returns (Empty);
  rpc GetBook (BookGetRequest) returns (BookResponse);
  rpc DeleteBook (BookDeleteRequest) returns (Empty);
  rpc GetAllBooks(Empty) returns (BookListResponse);
}